--- a/complaint-prod.yaml
+++ b/complaint-prod.yaml
@@ -1,7 +1,7 @@
 build:
   version: "1.0.0"
 
-auth:
+complaint:
   message: "Welcome to compliant service related prd apis"
   contactDetails:
     name: "Suresh - Product Owner"
