--- a/complaint.yaml
+++ b/complaint.yaml
@@ -1,7 +1,7 @@
 build:
   version: "3.0.0"
 
-auth:
+complaint:
   message: "Welcome to compliant service related local apis"
   contactDetails:
     name: "Suresh - Developer"
